--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,9 @@ buildscript {
     ext.kotlin_version = '1.4.10'
     repositories {
 //        maven { url "https://oss.jfrog.org/libs-snapshot" }
-        maven { url "http://localhost:8082/artifactory/android_group" }
+//        maven { url "http://localhost:8082/artifactory/android_group" }
+        google()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.1'
@@ -18,7 +20,9 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url "http://localhost:8082/artifactory/android_group" }
+        google()
+        jcenter()
+//        maven { url "http://localhost:8082/artifactory/android_group" }
     }
 }
 
